# game-tree-search-with-alpha-beta-pruning

./: .gitignore  README.md  game.py  pyproject.toml
ai-vs-ai-moves/: moves0.txt  moves1.txt  moves2.txt  moves3.txt  moves4.txt  moves5.txt
boards/: test0.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
human-vs-ai-moves/: moves-test0.txt  moves-test1.txt
