[tool.poetry]
name = "game-tree-search-with-alpha-beta-pruning"
version = "0.1.0"
description = ""
authors = ["emirkantul <emirkantul@gmail.com>"]
readme = "README.md"
packages = [{include = "game_tree_search_with_alpha_beta_pruning"}]

[tool.poetry.dependencies]
python = "^3.9"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
